--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
   <link type="text/css" href="./css/styles.css" rel="stylesheet">
   <script type="text/javascript" src="./js/materialize.min.js"></script>
   <script src="./js/ui.js" defer></script>
+  <link rel="manifest" href="/manifest.json">
+  <!-- iOS support -->
+  <link rel="apple-touch-icon" href="/img/icons/icon96x96.png">
+  <meta name="apple-mobile-web-app-status-bar" content="#AA7700">
 </head>
 <body class="grey lighten-4">
 
   <!-- top nav -->
   <nav class="z-depth-0">
     <div class="nav-wrapper container">
-      <a href="/"><span>PWA</span>CookBook</a>
+      <a href="/"><span>Moody</span>Foody</a>
       <span class="right white-text text-darken-1">
         <i class="material-icons sidenav-trigger" data-target="side-menu">menu</i>
       </span>
