--- a/pages/about.html
+++ b/pages/about.html
@@ -12,6 +12,9 @@
   <link type="text/css" href="../css/styles.css" rel="stylesheet">
   <script type="text/javascript" src="../js/materialize.min.js"></script>
   <script src="../js/ui.js" defer></script>
+  <link rel="manifest" href="/manifest.json">
+  <link rel="apple-touch-icon" href="/img/icons/icon96x96.png">
+  <meta name="apple-mobile-web-app-status-bar" content="#AA7700">
 </head>
 <body class="grey lighten-4">
 
